--- a/bunsan/bacs/problems/PKGBUILD
+++ b/bunsan/bacs/problems/PKGBUILD
@@ -1,22 +1,23 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
-pkgname='bunsan.bacs.single.api-git'
+pkgname='bunsan.bacs.problems-git'
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="bacs.single api library"
+pkgdesc="bacs common problem plugins"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_bacs_single_api"
+url="https://github.com/sarum9in/bunsan_bacs_problem"
 license=('GPL')
 groups=()
-depends=('protobuf' 'boost-libs')
-makedepends=('git' 'cmake')
+depends=('protobuf' 'boost-libs'
+         'bunsan.bacs.problem.single-git')
+makedepends=('git' 'cmake' 'boost')
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_single_api.git")
-source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_single_api.git")
+#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_problems.git")
+source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_problems.git")
 noextract=()
 md5sums=('SKIP')
 
