--- a/qemu-scripts/qemu-scripts/srv/kvm/examples/config
+++ b/qemu-scripts/qemu-scripts/srv/kvm/examples/config
@@ -1,8 +1,7 @@
 #!/bin/bash -e
 
-####################################################
-# example config.sh file for virtual machine #
-####################################################
+# $root -- machine root directory
+# ${argv[@]} -- CLI arguments
 
 # you can override qemu command here
 #qemu=('qemu-system-x86_64')
@@ -11,4 +10,7 @@
 #macaddr="DE:AD:BE:EF:00:00"
 
 # set up bridge interface if you do not want to use default
-#export QEMU_BRIDGE="br0"
+#bridge="br0"
+
+# qemu arguments
+#arguments=(-nographic -m 2G -hda "$root/img.qcow" "${argv[@]}")
