--- a/bunsan/worker_python/PKGBUILD
+++ b/bunsan/worker_python/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Filippov Aleksey <sarum9in@gmail.com>
+# Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname='python-bunsan.worker-git'
 pkgver=0.0.0
 pkgrel=1
