--- a/python2-pyxb/PKGBUILD
+++ b/python2-pyxb/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Filippov Aleksey <sarum9in@gmail.com>
+# Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname=python2-pyxb
 pkgver=1.1.3
 pkgrel=1
