--- a/bacs/legacy/userlibs/PKGBUILD
+++ b/bacs/legacy/userlibs/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Filippov Aleksey <sarum9in@gmail.com>
+# Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname=bacs_legacy_userlibs
 pkgver=4
 pkgrel=1
