--- a/bacs/xsd/PKGBUILD
+++ b/bacs/xsd/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Filippov Aleksey <sarum9in@gmail.com>
+# Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname=bacs.xsd-git
 pkgver=0.0.0
 pkgrel=1
