--- a/boost.process-svn/PKGBUILD
+++ b/boost.process-svn/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Filippov Aleksey <sarum9in@gmail.com>
+# Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname=boost.process-svn
 pkgver=0.0.0
 pkgrel=1
