--- a/obnam/python2-cliapp-bzr/PKGBUILD
+++ b/obnam/python2-cliapp-bzr/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Filippov Aleksey <sarum9in@gmail.com>
+# Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname=python2-cliapp-bzr
 pkgver=0.0.0
 pkgrel=1
