cppzmq-git update: zeromq-beta was replaced by community/zeromq.

--- a/bunsan/network/PKGBUILD
+++ b/bunsan/network/PKGBUILD
@@ -7,8 +7,8 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_network"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'boost-libs' 'zeromq-beta' 'cppzmq-git' 'xmlrpc-c-svn')
-makedepends=('git' 'cmake')
+depends=('bunsan.common-git' 'boost-libs' 'cppzmq-git' 'xmlrpc-c-svn')
+makedepends=('git' 'cmake' 'boost')
 provides=()
 conflicts=()
 replaces=()
