boost.process-svn PKGBUILD style fixes.

--- a/boost.process-svn/PKGBUILD
+++ b/boost.process-svn/PKGBUILD
@@ -7,10 +7,10 @@ arch=('any')
 url="http://www.highscore.de/boost/process/"
 license=('GPL')
 groups=()
-depends=(boost)
+depends=('boost')
 makedepends=('subversion')
-provides=(boost.process)
-conflicts=(boost.process)
+provides=('boost.process')
+conflicts=('boost.process')
 replaces=()
 backup=()
 options=()
