yandex.contest.{system,invoker}-git update.

--- a/yandex-contest/invoker/PKGBUILD
+++ b/yandex-contest/invoker/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/sarum9in/yandex_contest_invoker"
 license=('GPL')
 groups=()
 depends=('boost-libs' 'yandex.contest.common-git' 'yandex.contest.system-git')
-makedepends=('git' 'boost')
+makedepends=('git' 'boost' 'bunsan.testing-git')
 provides=()
 conflicts=()
 replaces=()
