--- a/yandex-contest/system/PKGBUILD
+++ b/yandex-contest/system/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/sarum9in/yandex_contest_system"
 license=('GPL')
 groups=()
 depends=('boost-libs' 'lxc0.8' 'pkgconfig' 'yandex.contest.common-git')
-makedepends=('git' 'boost')
+makedepends=('git' 'boost' 'bunsan.testing-git')
 provides=()
 conflicts=()
 replaces=()
