New bunsan.process-git dependency: bunsan.testing-git.

--- a/bunsan/process/PKGBUILD
+++ b/bunsan/process/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/sarum9in/bunsan_process"
 license=('GPL')
 groups=()
 depends=('bunsan.common-git' 'boost-libs' 'boost.process-svn')
-makedepends=('git' 'cmake')
+makedepends=('git' 'cmake' 'bunsan.testing-git')
 provides=()
 conflicts=()
 replaces=()
