--- a/yandex-contest/common/PKGBUILD
+++ b/yandex-contest/common/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/sarum9in/yandex_contest_common"
 license=('GPL')
 groups=()
 depends=('boost-libs' 'bunsan.common-git')
-makedepends=('git' 'cmake' 'boost')
+makedepends=('git' 'cmake' 'boost' 'bunsan.testing-git')
 provides=()
 conflicts=()
 replaces=()
