--- a/obnam/python2-tracing-git/PKGBUILD
+++ b/obnam/python2-tracing-git/PKGBUILD
@@ -1,27 +1,27 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname=python2-ttystatus-bzr
+pkgname=python2-tracing-git
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="progress and status updates on terminals for Python"
+pkgdesc="The Python library tracing helps with logging debug messages."
 arch=('i686' 'x86_64')
-url="http://liw.fi/ttystatus/"
+url="http://liw.fi/tracing/"
 license=('GPL3')
 groups=()
 depends=('python2')
-makedepends=('bzr')
-provides=('python2-ttystatus')
-conflicts=('python2-ttystatus')
-replaces=()
+makedepends=('git')
+provides=('python2-tracing')
+conflicts=('python2-tracing')
+replaces=('python2-tracing-bzr')
 backup=()
 options=()
 install=
-source=("$pkgname::bzr+http://code.liw.fi/ttystatus/bzr/trunk/")
+source=("$pkgname::git://git.liw.fi/python-tracing")
 noextract=()
 md5sums=('SKIP')
 
 pkgver() {
   cd "$srcdir/$pkgname"
-  bzr revno
+  echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
 }
 
 build() {
