--- a/obnam/obnam-bzr/PKGBUILD
+++ b/obnam/obnam-bzr/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="http://liw.fi/obnam/"
 license=('GPL3')
 groups=()
-depends=('python2' 'python2-cliapp-bzr' 'python2-tracing-bzr' 'python2-larch-bzr' 'python2-ttystatus-bzr' 'python2-paramiko')
+depends=('python2' 'python2-cliapp-git' 'python2-tracing-git' 'python2-larch-git' 'python2-ttystatus-git' 'python2-paramiko')
 makedepends=('bzr')
 provides=('obnam')
 conflicts=('obnam')
