--- a/obnam/python2-cliapp-git/PKGBUILD
+++ b/obnam/python2-cliapp-git/PKGBUILD
@@ -1,27 +1,27 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname=python2-larch-bzr
+pkgname=python2-cliapp-git
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="Python B-tree library"
+pkgdesc="Python framework for Unix-like command line programs"
 arch=('i686' 'x86_64')
-url="http://liw.fi/larch/"
+url="http://liw.fi/cliapp/"
 license=('GPL3')
 groups=()
-depends=('python2' 'python2-tracing')
-makedepends=('bzr')
-provides=('python2-larch')
-conflicts=('python2-larch')
-replaces=()
+depends=('python2')
+makedepends=('git')
+provides=('python2-cliapp')
+conflicts=('python2-cliapp')
+replaces=('python2-cliapp-bzr')
 backup=()
 options=()
 install=
-source=("$pkgname::bzr+http://code.liw.fi/larch/bzr/trunk/")
+source=("$pkgname::git://git.liw.fi/cliapp")
 noextract=()
 md5sums=('SKIP')
 
 pkgver() {
   cd "$srcdir/$pkgname"
-  bzr revno
+  echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
 }
 
 build() {
