--- a/obnam/python2-ttystatus-git/PKGBUILD
+++ b/obnam/python2-ttystatus-git/PKGBUILD
@@ -1,27 +1,27 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname=python2-cliapp-bzr
+pkgname=python2-ttystatus-git
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="Python framework for Unix-like command line programs"
+pkgdesc="progress and status updates on terminals for Python"
 arch=('i686' 'x86_64')
-url="http://liw.fi/cliapp/"
+url="http://liw.fi/ttystatus/"
 license=('GPL3')
 groups=()
 depends=('python2')
-makedepends=('bzr')
-provides=('python2-cliapp')
-conflicts=('python2-cliapp')
-replaces=()
+makedepends=('git')
+provides=('python2-ttystatus')
+conflicts=('python2-ttystatus')
+replaces=('python2-ttystatus-bzr')
 backup=()
 options=()
 install=
-source=("$pkgname::bzr+http://code.liw.fi/cliapp/bzr/trunk/")
+source=("$pkgname::git://git.liw.fi/ttystatus")
 noextract=()
 md5sums=('SKIP')
 
 pkgver() {
   cd "$srcdir/$pkgname"
-  bzr revno
+  echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
 }
 
 build() {
