--- a/bunsan/common/PKGBUILD
+++ b/bunsan/common/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/sarum9in/bunsan_common"
 license=('GPL')
 groups=()
 depends=('boost-libs' 'bunsan.cmake-git') # TODO bunsan.cmake is makedepend
-makedepends=('git' 'cmake')
+makedepends=('git' 'cmake' 'bunsan.testing-git')
 provides=()
 conflicts=()
 replaces=()
