lxc0.8 package update.

--- a/lxc0.8/PKGBUILD
+++ b/lxc0.8/PKGBUILD
@@ -8,10 +8,10 @@ _pkgname=lxc
 pkgname=${_pkgname}0.8
 pkgver=0.8.0
 epoch=1
-pkgrel=3
+pkgrel=4
 pkgdesc="Linux Containers"
 arch=('i686' 'x86_64')
-url="http://lxc.sourceforge.net/"
+url="http://linuxcontainers.org/"
 depends=('bash' 'perl')
 conflicts=('lxc')
 provides=('lxc')
