--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -48,7 +48,9 @@
         {
             "resourceLimits":
             {
-                "userTimeLimitMillis": 2000,
+                "timeLimitNanos": 60000000000,
+                "userTimeLimitMillis": 3600000,
+                "systemTimeLimitMillis": 3600000,
                 "memoryLimitBytes": 67108864,
                 "outputLimitBytes": 8388608,
                 "numberOfProcesses": 32
