bunsan.process-git package dependencies update.

--- a/bunsan/process/PKGBUILD
+++ b/bunsan/process/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_process"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'boost-libs' 'boost.process-svn')
+depends=('bunsan.common-git' 'boost-libs')
 makedepends=('git' 'cmake' 'bunsan.testing-git')
 provides=()
 conflicts=()
