--- a/bunsan/testing/PKGBUILD
+++ b/bunsan/testing/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/sarum9in/bunsan_testing"
 license=('GPL')
 groups=()
 depends=('boost-libs' 'bunsan.cmake-git') # TODO bunsan.cmake is makedepend
-makedepends=('git' 'cmake')
+makedepends=('git' 'cmake' 'boost')
 provides=()
 conflicts=()
 replaces=()
