--- a/obnam/obnam-git/PKGBUILD
+++ b/obnam/obnam-git/PKGBUILD
@@ -1,27 +1,27 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname=obnam-bzr
-pkgver=0.0.0
-pkgrel=1
+pkgname=obnam-git
+pkgver=4143.8c67fc9
+pkgrel=1024
 pkgdesc="Obnam is an easy, secure backup program."
 arch=('i686' 'x86_64')
 url="http://liw.fi/obnam/"
 license=('GPL3')
 groups=()
 depends=('python2' 'python2-cliapp-git' 'python2-tracing-git' 'python2-larch-git' 'python2-ttystatus-git' 'python2-paramiko')
-makedepends=('bzr')
+makedepends=('git')
 provides=('obnam')
 conflicts=('obnam')
 replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::bzr+http://code.liw.fi/obnam/bzr/trunk/")
+source=("$pkgname::git://git.liw.fi/obnam")
 noextract=()
 md5sums=('SKIP')
 
 pkgver() {
   cd "$srcdir/$pkgname"
-  bzr revno
+  echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
 }
 
 build() {
