python2-larch-git package dependency fix.

--- a/obnam/python2-larch-git/PKGBUILD
+++ b/obnam/python2-larch-git/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="http://liw.fi/larch/"
 license=('GPL3')
 groups=()
-depends=('python2' 'python2-tracing')
+depends=('python2' 'python2-tracing-git')
 makedepends=('git')
 provides=('python2-larch')
 conflicts=('python2-larch')
