New packages: bunsan.bacs.{common,system}-git.

--- a/bunsan/bacs/common/PKGBUILD
+++ b/bunsan/bacs/common/PKGBUILD
@@ -1,15 +1,13 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname='bunsan.bacs.problem-git'
+pkgname='bunsan.bacs.common-git'
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="bacs problem importer library"
+pkgdesc="bacs commons"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_bacs_problem"
+url="https://github.com/sarum9in/bunsan_bacs_common"
 license=('GPL')
 groups=()
-depends=('protobuf' 'boost-libs'
-         'bunsan.bacs.common-git'
-         'bunsan.pm-git')
+depends=('protobuf' 'boost-libs')
 makedepends=('git' 'cmake' 'boost')
 provides=()
 conflicts=()
@@ -17,8 +15,8 @@ replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_problem.git")
-source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_problem.git")
+#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_common.git")
+source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_common.git")
 noextract=()
 md5sums=('SKIP')
 
@@ -36,7 +34,7 @@ build() {
 
 check() {
   cd "$srcdir/$pkgname/build"
-  make test
+  #make test
 }
 
 package() {
