--- a/bunsan/bacs/system/PKGBUILD
+++ b/bunsan/bacs/system/PKGBUILD
@@ -1,15 +1,14 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname='bunsan.bacs.problem-git'
-pkgver=0.0.0
-pkgrel=1
-pkgdesc="bacs problem importer library"
+pkgname='bunsan.bacs.system-git'
+pkgver=4.32617f7
+pkgrel=1029
+pkgdesc="bacs system library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_bacs_problem"
+url="https://github.com/sarum9in/bunsan_bacs_system"
 license=('GPL')
 groups=()
 depends=('protobuf' 'boost-libs'
-         'bunsan.bacs.common-git'
-         'bunsan.pm-git')
+         'bunsan.bacs.common-git')
 makedepends=('git' 'cmake' 'boost')
 provides=()
 conflicts=()
@@ -17,8 +16,8 @@ replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_problem.git")
-source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_problem.git")
+#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_system.git")
+source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_system.git")
 noextract=()
 md5sums=('SKIP')
 
