yandex.contest.invoker-git package lxc.conf bug fix.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -58,8 +58,8 @@
             "environment":
             {
                 "PATH": "/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/sbin",
-                "LC_ALL": "C",
-                "LANG": "C",
+                "LC_ALL": "en_US.UTF-8",
+                "LANG": "en_US.UTF-8",
                 "HOME": "/"
             },
             "currentPath": "/",
