--- a/bunsan/dcs/PKGBUILD
+++ b/bunsan/dcs/PKGBUILD
@@ -4,18 +4,24 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan dcs"
 arch=('i686' 'x86_64')
-url=""
+url="https://github.com/sarum9in/bunsan_dcs"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'bunsan.network-git')
-makedepends=('git' 'cmake')
+depends=(
+  'bunsan.common-git'
+  'bunsan.network-git'
+)
+makedepends=(
+  'bunsan.cmake-git'
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_dcs.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_dcs.git")
 noextract=()
 md5sums=('SKIP')
