--- a/bunsan/bacs/archive/PKGBUILD
+++ b/bunsan/bacs/archive/PKGBUILD
@@ -2,23 +2,31 @@
 pkgname='bunsan.bacs.archive-git'
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="bacs archive interface (library + web site)"
+pkgdesc="BACS Archive interface (library + web site)"
 arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_bacs_archive"
 license=('GPL')
 groups=()
-depends=('protobuf' 'boost-libs'
-         'bunsan.common-git' 'bunsan.process-git' 'bunsan.utility-git'
-         'bunsan.network-git' 'bunsan.web-git' 'bunsan.pm-git'
-         'bunsan.bacs.problems-git')
-makedepends=('git' 'cmake' 'boost')
+depends=(
+  'bunsan.process-git'
+  'bunsan.utility-git'
+  'bunsan.network-git'
+  'bunsan.web-git'
+  'bunsan.pm-git'
+  'bunsan.protobuf-git'
+  'bunsan.bacs.problems-git'
+)
+makedepends=(
+  'bunsan.cmake-git'
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_archive.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_archive.git")
 noextract=()
 md5sums=('SKIP')
