--- a/bunsan/bacs/problems/PKGBUILD
+++ b/bunsan/bacs/problems/PKGBUILD
@@ -2,21 +2,26 @@
 pkgname='bunsan.bacs.problems-git'
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="bacs common problem plugins"
+pkgdesc="BACS common problem plugins"
 arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_bacs_problem"
 license=('GPL')
 groups=()
-depends=('protobuf' 'boost-libs'
-         'bunsan.bacs.problem.single-git')
-makedepends=('git' 'cmake' 'boost')
+depends=(
+  'bunsan.protobuf-git'
+  'bunsan.bacs.problem.single-git'
+)
+makedepends=(
+  'bunsan.cmake-git'
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_bacs_problems.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_problems.git")
 noextract=()
 md5sums=('SKIP')
