--- a/bunsan/cmake/PKGBUILD
+++ b/bunsan/cmake/PKGBUILD
@@ -8,14 +8,16 @@ url="https://github.com/sarum9in/bunsan_cmake"
 license=('GPL')
 groups=()
 depends=('cmake')
-makedepends=('git' 'cmake')
+makedepends=(
+  'git'
+  'cmake'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_cmake.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_cmake.git")
 noextract=()
 md5sums=('SKIP')
