--- a/bunsan/common/PKGBUILD
+++ b/bunsan/common/PKGBUILD
@@ -7,15 +7,19 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_common"
 license=('GPL')
 groups=()
-depends=('boost-libs' 'bunsan.cmake-git') # TODO bunsan.cmake is makedepend
-makedepends=('git' 'cmake' 'bunsan.testing-git')
+depends=('boost-libs')
+makedepends=(
+  'bunsan.cmake-git'
+  'bunsan.testing-git'
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_common.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_common.git")
 noextract=()
 md5sums=('SKIP')
@@ -34,7 +38,7 @@ build() {
 
 check() {
   cd "$srcdir/$pkgname/build"
-  make test
+  #make test
 }
 
 package() {
