--- a/bunsan/curl/PKGBUILD
+++ b/bunsan/curl/PKGBUILD
@@ -1,22 +1,19 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname='bunsan.bacs.statement_provider-git'
+pkgname='bunsan.curl-git'
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="BACS statement_provider interface (library + web site)"
+pkgdesc="bunsan project cURL bindings"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_bacs_statement_provider"
+url="https://github.com/sarum9in/bunsan_curl"
 license=('GPL')
 groups=()
 depends=(
-  'bunsan.utility-git'
-  'bunsan.network-git'
-  'bunsan.web-git'
-  'bunsan.pm-git'
-  'bunsan.protobuf-git'
-  'bunsan.bacs.problems-git'
+  'bunsan.common-git'
+  'curl'
 )
 makedepends=(
   'bunsan.cmake-git'
+  'bunsan.testing-git'
   'git'
   'boost'
 )
@@ -26,7 +23,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_bacs_statement_provider.git")
+source=("$pkgname::git://github.com/sarum9in/bunsan_curl.git")
 noextract=()
 md5sums=('SKIP')
 
