--- a/bunsan/worker/PKGBUILD
+++ b/bunsan/worker/PKGBUILD
@@ -7,15 +7,24 @@ arch=('i686' 'x86_64')
 url=""
 license=('GPL')
 groups=()
-depends=('python' 'bunsan.common-git' 'bunsan.network-git' 'bunsan.pm-git' 'bunsan.dcs-git')
-makedepends=('git')
+depends=(
+  'python'
+  'bunsan.common-git'
+  'bunsan.network-git'
+  'bunsan.pm-git'
+  'bunsan.dcs-git'
+)
+makedepends=(
+  'bunsan.cmake-git'
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_worker.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_worker.git")
 noextract=()
 md5sums=('SKIP')
