--- a/bunsan/worker_python/PKGBUILD
+++ b/bunsan/worker_python/PKGBUILD
@@ -7,15 +7,20 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_worker_python"
 license=('GPL')
 groups=()
-depends=('python' 'python-bunsan.pm-git')
-makedepends=('git' 'python')
+depends=(
+  'python-bunsan.pm-git'
+  'python'
+)
+makedepends=(
+  'git'
+  'python'
+)
 provides=()
 conflicts=()
 replaces=()
 backup=()
 options=()
 install=
-#source=("$pkgname::git://cs.istu.ru/bunsan_worker_python.git")
 source=("$pkgname::git://github.com/sarum9in/bunsan_worker_python.git")
 noextract=()
 md5sums=('SKIP')
