--- a/yandex-contest/invoker-flowctl-game/PKGBUILD
+++ b/yandex-contest/invoker-flowctl-game/PKGBUILD
@@ -7,8 +7,13 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/yandex_contest_invoker_flowctl_game"
 license=('GPL')
 groups=()
-depends=('boost-libs' 'yandex.contest.invoker-git')
-makedepends=('git' 'boost')
+depends=(
+  'yandex.contest.invoker-git'
+)
+makedepends=(
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
