--- a/yandex-contest/system/PKGBUILD
+++ b/yandex-contest/system/PKGBUILD
@@ -7,8 +7,17 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/yandex_contest_system"
 license=('GPL')
 groups=()
-depends=('boost-libs' 'lxc0.8' 'pkgconfig' 'yandex.contest.common-git')
-makedepends=('git' 'boost' 'bunsan.testing-git')
+depends=(
+  'yandex.contest.common-git'
+  'lxc0.8'
+  'pkgconfig'
+)
+makedepends=(
+  'bunsan.cmake-git'
+  'bunsan.testing-git'
+  'git'
+  'boost'
+)
 provides=()
 conflicts=()
 replaces=()
@@ -27,7 +36,7 @@ pkgver() {
 build() {
   cd "$srcdir/$pkgname"
   mkdir build && cd build
-  cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
+  cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release #-DENABLE_TESTS=no
   make $MAKEFLAGS
 }
 
