--- a/bunsan/network/PKGBUILD
+++ b/bunsan/network/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project network library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_network"
+url="https://github.com/bunsanorg/network"
 license=('GPL')
 groups=()
 depends=(
@@ -23,7 +23,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_network.git")
+source=("$pkgname::git://github.com/bunsanorg/network.git")
 noextract=()
 md5sums=('SKIP')
 
