--- a/bunsan/cmake/PKGBUILD
+++ b/bunsan/cmake/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project cmake library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_cmake"
+url="https://github.com/bunsanorg/cmake"
 license=('GPL')
 groups=()
 depends=('cmake')
@@ -18,7 +18,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_cmake.git")
+source=("$pkgname::git://github.com/bunsanorg/cmake.git")
 noextract=()
 md5sums=('SKIP')
 
