--- a/bunsan/common/PKGBUILD
+++ b/bunsan/common/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project common library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_common"
+url="https://github.com/bunsanorg/common"
 license=('GPL')
 groups=()
 depends=('boost-libs')
@@ -20,7 +20,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_common.git")
+source=("$pkgname::git://github.com/bunsanorg/common.git")
 noextract=()
 md5sums=('SKIP')
 
