--- a/bunsan/lua/PKGBUILD
+++ b/bunsan/lua/PKGBUILD
@@ -23,7 +23,7 @@ backup=()
 options=()
 install=
 source=("$pkgname::git://cs.istu.ru/bunsan_lua.git")
-#source=("$pkgname::git://github.com/sarum9in/bunsan_lua.git")
+#source=("$pkgname::git://github.com/bunsanorg/lua.git")
 noextract=()
 md5sums=('SKIP')
 
