--- a/bunsan/protobuf/PKGBUILD
+++ b/bunsan/protobuf/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project protobuf library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_protobuf"
+url="https://github.com/bunsanorg/protobuf"
 license=('GPL')
 groups=()
 depends=(
@@ -23,7 +23,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_protobuf.git")
+source=("$pkgname::git://github.com/bunsanorg/protobuf.git")
 noextract=()
 md5sums=('SKIP')
 
