--- a/bunsan/utility/PKGBUILD
+++ b/bunsan/utility/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project utility library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_utility"
+url="https://github.com/bunsanorg/utility"
 license=('GPL')
 groups=()
 depends=(
@@ -22,7 +22,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_utility.git")
+source=("$pkgname::git://github.com/bunsanorg/utility.git")
 noextract=()
 md5sums=('SKIP')
 
