--- a/bunsan/web/PKGBUILD
+++ b/bunsan/web/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project web library"
 arch=('i686' 'x86_64')
-url="https://github.com/sarum9in/bunsan_web"
+url="https://github.com/bunsanorg/web"
 license=('GPL')
 groups=()
 depends=(
@@ -21,7 +21,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_web.git")
+source=("$pkgname::git://github.com/bunsanorg/web.git")
 noextract=()
 md5sums=('SKIP')
 
