--- a/bunsan/worker/PKGBUILD
+++ b/bunsan/worker/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan worker"
 arch=('i686' 'x86_64')
-url=""
+url="https://github.com/bunsanorg/worker"
 license=('GPL')
 groups=()
 depends=(
@@ -25,7 +25,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/sarum9in/bunsan_worker.git")
+source=("$pkgname::git://github.com/bunsanorg/worker.git")
 noextract=()
 md5sums=('SKIP')
 
