Fixed yandex.contest.invoker-git package.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -8,10 +8,17 @@
         {
             "entries":
             [
-                "/bin /bin none ro,bind 0 0",
+                "/etc/mono /etc/mono none ro,bind 0 0",
                 "/usr /usr none ro,bind 0 0",
                 "/opt /opt none ro,bind 0 0",
-                "none /cgroup cgroup defaults 0 0"
+                "/sys/fs/cgroup/systemd /sys/fs/cgroup/systemd none bind 0 0",
+                "/sys/fs/cgroup/blkio /sys/fs/cgroup/blkio none bind 0 0",
+                "/sys/fs/cgroup/memory /sys/fs/cgroup/memory none bind 0 0",
+                "/sys/fs/cgroup/cpu,cpuacct /sys/fs/cgroup/cpu,cpuacct none bind 0 0",
+                "/sys/fs/cgroup/cpuset /sys/fs/cgroup/cpuset none bind 0 0",
+                "/sys/fs/cgroup/freezer /sys/fs/cgroup/freezer none bind 0 0",
+                "/sys/fs/cgroup/net_cls /sys/fs/cgroup/net_cls none bind 0 0",
+                "/sys/fs/cgroup/devices /sys/fs/cgroup/devices none bind 0 0"
             ]
         },
         "cgroup":
@@ -165,6 +172,20 @@
                 {
                     "path": "/dev/shm",
                     "mode": "0755"
+                }
+            },
+            {
+                "SymLink":
+                {
+                    "path": "/bin",
+                    "value": "/usr/bin"
+                }
+            },
+            {
+                "SymLink":
+                {
+                    "path": "/sbin",
+                    "value": "/usr/bin"
                 }
             },
             {
