Added check() rule for czmq package.

--- a/czmq/PKGBUILD
+++ b/czmq/PKGBUILD
@@ -19,6 +19,11 @@ build() {
   make $MAKEFLAGS
 }
 
+check() {
+  cd "$srcdir/$pkgname-$pkgver"
+  make check
+}
+
 package() {
   cd "$srcdir/$pkgname-$pkgver"
   make DESTDIR="$pkgdir/" install
