Fixed yandex.contest.invoker-git package.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -8,9 +8,10 @@
         {
             "entries":
             [
+                "/etc/java-8-openjdk /etc/java-8-openjdk none ro,bind 0 0",
                 "/etc/mono /etc/mono none ro,bind 0 0",
-                "/usr /usr none ro,bind 0 0",
                 "/opt /opt none ro,bind 0 0",
+                "/usr /usr none ro,bind 0 0",
                 "/sys/fs/cgroup/systemd /sys/fs/cgroup/systemd none bind 0 0",
                 "/sys/fs/cgroup/blkio /sys/fs/cgroup/blkio none bind 0 0",
                 "/sys/fs/cgroup/memory /sys/fs/cgroup/memory none bind 0 0",
