--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ pkg
 /yandex-contest/invoker-flowctl-pipectl/yandex.contest.invoker.flowctl.pipectl-git/
 
 /boost.process-svn/boost.process-svn/
+/czmqpp-git/czmqpp-git/
 /xmlrpc-c/xmlrpc-c-svn/
 
 /obnam/obnam-bzr/obnam-bzr/
