--- a/bunsan/bacs/problem_plugins/single/PKGBUILD
+++ b/bunsan/bacs/problem_plugins/single/PKGBUILD
@@ -31,7 +31,7 @@ pkgver() {
 
 build() {
   cd "$srcdir/$pkgname"
-  mkdir build && cd build
+  rm -rf build && mkdir build && cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
   make $MAKEFLAGS
 }
