--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ pkg
 /bunsan/bacs/problems/bunsan.bacs.problems-git/
 /bunsan/bacs/statement_provider/bunsan.bacs.statement_provider-git/
 /bunsan/bacs/system/bunsan.bacs.system-git/
+/bunsan/broker/bunsan.broker-git/
 /bunsan/cmake/bunsan.cmake-git/
 /bunsan/common/bunsan.common-git/
 /bunsan/common_python/python-bunsan.common-git/
