--- a/bacs/legacy/web/PKGBUILD
+++ b/bacs/legacy/web/PKGBUILD
@@ -1,6 +1,7 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
+_github_token=
 pkgname=bacs.web.legacy-git
-pkgver=2.e788e0c
+pkgver=21.8f1eb8f
 pkgrel=1
 pkgdesc="BACS.WEB legacy webapp"
 arch=('any')
@@ -16,9 +17,9 @@ backup=('etc/webapps/bacs/config.php')
 options=()
 install=
 source=(
-  "$pkgname::git+https://github.com/istu-cs/bacs_web_legacy.git"
-  "contrib::git+https://github.com/istu-cs/bacs_web_legacy_contrib.git"
-  "ads::git+https://github.com/istu-cs/bacs_web_legacy_ads.git"
+  "$pkgname::git+https://${_github_token}@github.com/istu-cs/bacs_web_legacy.git"
+  "contrib::git+https://${_github_token}@github.com/istu-cs/bacs_web_legacy_contrib.git"
+  "ads::git+https://${_github_token}@github.com/istu-cs/bacs_web_legacy_ads.git"
   "git://github.com/Synchro/PHPMailer.git"
 )
 noextract=()
