--- a/bunsan/broker/PKGBUILD
+++ b/bunsan/broker/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname=bunsan.broker-git
-pkgver=25.24764a0
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan broker"
 arch=('i686' 'x86_64')
@@ -15,7 +15,7 @@ depends=(
   'python-bunsan.pm-git'
   'bunsan.protobuf-git'
   'python-protobuf3'
-  'python-pika-git' # python-pika has bugs
+  'python-pika'
 )
 makedepends=(
   'bunsan.cmake-git'
